hotfix css for prez

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -16,7 +16,7 @@
     <div class="container-card">
         <div class="card">
             <img class="image-card" src="/assets/images/list_share_bg.jpg" alt="cadeau-bleu">
-            <h3>Gift Me 5</h3>
+            <h3>Gift Me Gifts</h3>
             <p class="paragraph">Vous pouvez créer vos propres listes de cadeaux et les partager à vos proches, ils
                 peuvent parcourir votre liste et vous offrir ce qu'ils veulent.</p>
             {% if user is not null %}
@@ -28,7 +28,7 @@
         <div class="card">
             <img class="image-card" src="/assets/images/pexels-laura.jpg" alt="cadeau-beige">
             <h3>Comment ça fonctionne?</h3>
-            <p class="paragraph">Marre des cadeaux inutiles ?<br>Vos amis sont inutiles quand vient le temps de vous
+            <p class="paragraph">Lassé d'ouvrir des cadeaux nuls ?<br>Vos amis sont inutiles quand vient le temps de vous
                 satisfaire ?
                 <br>Aidez-les à vous faire plaisir avec Give me Gifts!</p>
 
@@ -41,8 +41,8 @@
         <div class="card">
             <img class="image-card" src="/assets/images/pexels-szabo.jpg" alt="youtube-image">
             <h3>Youtube</h3>
-            <p class="paragraph">Vous pouvez retrouver une vidéo explicative du site Give me Gifts et apprendre à donner
-                un cadeau à vos amis </p>
+            <p class="paragraph">Quel est l'intérêt ?<br>Vous pouvez retrouver une vidéo explicative du site Give
+                me Gifts et aider vos amis à vous trouver le cadeau idéal</p>
             <a class="button" href="http://www.youtube.com">Regarder</a>
         </div>
     </div>
