--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -113,4 +113,24 @@ a {
     .card > .paragraph {
         font-size: 1.5rem;
     }
+
+    .button {
+        width: 10rem;
+        margin-bottom: 1rem;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: var(--btn-color);
+        border-radius: 11px;
+        color: var(--primary-color);
+        font-size: 20px;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        font-weight: bold;
+        box-shadow: 2px 2px 4px black;
+    }
+
+    .button:hover {
+        background-color: var(--background-color);
+        color: var(--font-color);
+    }
 }
