--- a/public/assets/css/signup.css
+++ b/public/assets/css/signup.css
@@ -103,19 +103,17 @@ input[type=submit] {
     color: var(--primary-color);
     font-size: 20px;
     padding: 14px 20px;
-    border: none;
+    border:none;
     cursor: pointer;
     margin: 1rem 5rem 1rem 5rem;
     width: 13rem;
     border-radius: 11px;
-    border: solid black 0.5px;
     box-shadow: 2px 2px 4px black;
 }
 
 input[type=submit]:hover {
     background-color: var(--background-color);
-    color: var(--btn-color);
-    border: 1px solid var(--btn-color);
+    color: var(--font-color);
 }
 
 .show-password {
@@ -239,19 +237,17 @@ input[type=submit]:hover {
         color: var(--primary-color);
         font-size: 20px;
         padding: 14px 20px;
-        margin: 1rem 0;
-        border: none;
+        border:none;
         cursor: pointer;
-        width: 12rem;
+        margin: 1rem 5rem 1rem 5rem;
+        width: 13rem;
         border-radius: 11px;
         box-shadow: 2px 2px 4px black;
-        border: solid black 0.5px;
     }
 
     input[type=submit]:hover {
         background-color: var(--background-color);
-        color: var(--btn-color);
-        border: 1px solid var(--btn-color);
+        color: var(--font-color);
     }
 
     .show-password {
