--- a/public/assets/css/add_list.css
+++ b/public/assets/css/add_list.css
@@ -113,14 +113,12 @@ input[type=submit] {
     margin: 1rem 5rem 1rem 5rem;
     width: 13rem;
     border-radius: 11px;
-    border: solid black 0.5px;
     box-shadow: 2px 2px 4px black;
 }
 
 input[type=submit]:hover {
     background-color: var(--background-color);
-    color: var(--btn-color);
-    border: 1px solid var(--btn-color);
+    color: var(--font-color);
 }
 
 /*END OF MOBILE FIRST*/
@@ -241,15 +239,12 @@ input[type=submit]:hover {
         cursor: pointer;
         width: 12rem;
         border-radius: 11px;
-        box-shadow: 2px 2px 4px black;
-        border: solid black 0.5px;
         margin-left: auto;
         margin-right: auto;
     }
     
     input[type=submit]:hover {
         background-color: var(--background-color);
-        color: var(--btn-color);
-        border: 1px solid var(--btn-color);
+        color: var(--font-color);
     }
 }    
