--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -63,6 +63,22 @@
 				<div class="list-share-container">
 					<div class="article-container">
 						{% for article in list %}
+							{% if article.is_gifted is same as "1" %}
+							<div class="article-reserved">
+								<div class="article-id-hidden hidden" id="article-id-hidden">{{ article.id}}</div>
+								<div class="list-id-hidden hidden">{{ list[0]['list_id'] }}</div>
+								<img class="article-img" alt="{{ article.name }}" src="{{ article.picture }}"/>
+								<h4 class="article-title">{{ article.name }}</h4>
+								<h4 class="article-price">{{ article.price }}€</h4>
+								<p class="article-description">{{ article.description }}</p>
+								<a class="seeMore-button" href="{{ article.market_link }}" target="_blank">
+									<p>En savoir plus</p>
+								</a>
+								<div class="erase-button" id="erase-button">
+									<p>Supprimer !</p>
+								</div>
+							</div>
+							{% else %}
 							<div class="article">
 								<div class="article-id-hidden hidden" id="article-id-hidden">{{ article.id}}</div>
 								<div class="list-id-hidden hidden">{{ list[0]['list_id'] }}</div>
@@ -77,6 +93,7 @@
 									<p>Supprimer !</p>
 								</div>
 							</div>
+							{% endif %}
 						{% endfor %}
 					</div>
 				</div>
