--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -39,11 +39,11 @@
             {% endif %}
         </div>
         <div class="card">
-            <img class="image-card" src="/assets/images/pexels-szabo.jpg" alt="youtube-image">
+            <img class="image-card" src="/assets/images/gift-min.jpg" alt="youtube-image">
             <h3>Youtube</h3>
             <p class="paragraph">Quel est l'intérêt ?<br>Vous pouvez retrouver une vidéo explicative du site Give
                 me Gifts et aider vos amis à vous trouver le cadeau idéal</p>
-            <a class="button" href="http://www.youtube.com">Regarder</a>
+            <a class="button" href="/assets/video/Give me gifts vf.mp4">Regarder</a>
         </div>
     </div>
 {% endblock %}
