--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -18,10 +18,8 @@
 	<div class='page'>
 		<div class="add-form">
 			<div class="list-container">
-				<h3 class="list-title">Nom de la liste :
-					{{ lists['name'] }}</h3>
-				<h3 class="list-date">Date de l'événement :
-					{{ lists['limit_date']|date('d-m-Y') }}</h3>
+				<h3 class="list-title">{{ lists['name'] }}</h3>
+				<h3 class="list-date">{{ lists['limit_date']|date('d-m-Y') }}</h3>
 				<p class="list-description">
 					<strong>{{ lists['description'] }}</strong>
 				</p>
