--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/css/settings.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     {% block stylesheet %}{% endblock %}
-    <link rel="icon" href="/assets/images/favicon.png">
+    <link rel="icon" href="/assets/images/logo_simple.png">
 </head>
 
 <body>
