fix show password

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -43,7 +43,7 @@
             <h3>Youtube</h3>
             <p class="paragraph">Quel est l'intérêt ?<br>Vous pouvez retrouver une vidéo explicative du site Give
                 me Gifts et aider vos amis à vous trouver le cadeau idéal</p>
-            <a class="button" href="/assets/video/Give me gifts vf.mp4">Regarder</a>
+            <a class="button" href="/assets/video/Give me Gifts vf.mp4">Regarder</a>
         </div>
     </div>
 {% endblock %}
