--- a/public/assets/css/signup.css
+++ b/public/assets/css/signup.css
@@ -81,7 +81,7 @@
     margin-left: 1rem;
 }
 
-input[type=date], input[type=email], input[type=password] {
+input[type=date], input[type=email], input[type=password], input[type=text] {
     width: 21rem;
     padding: 12px 20px;
     border: 1px solid #ccc;
@@ -90,7 +90,15 @@ input[type=date], input[type=email], input[type=password] {
     border-radius: 11px;
 }
 
-input[type=text] {
+#firstname {
+    width: 9rem;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    text-align: center;
+    border-radius: 11px;
+}
+
+#lastname {
     width: 9rem;
     padding: 12px 20px;
     border: 1px solid #ccc;
@@ -214,7 +222,7 @@ input[type=submit]:hover {
         margin: auto;
     }
 
-    input[type=date], input[type=email], input[type=password] {
+    input[type=date], input[type=email], input[type=password], input[type=text]  {
         width: 30rem;
         padding: 12px 20px;
         border: 1px solid #ccc;
@@ -223,7 +231,16 @@ input[type=submit]:hover {
         margin-right: auto;
     }
 
-    input[type=text] {
+    #firstname {
+        width: 15rem;
+        padding: 12px 10px;
+        border: 1px solid #ccc;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #lastname {
         width: 15rem;
         padding: 12px 10px;
         border: 1px solid #ccc;
