--- a/src/View/List/add_list.html.twig
+++ b/src/View/List/add_list.html.twig
@@ -30,9 +30,7 @@
                     <option value="6">Autre</option>
                 </select>
                 <label for="description"><p class="description">Description</p></label>
-                <textarea class="description_area" id="description"
-                          placeholder="Indiquez des informations sur votre liste"
-                          name="description" required> </textarea>
+                <textarea class="description_area" id="description" placeholder="Indiquez des informations sur votre liste" name="description" required> </textarea>
                 <input type="submit" id='submit' value='Créer la liste'>
             </form>
         </div>
