--- a/src/View/List/index.html.twig
+++ b/src/View/List/index.html.twig
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/assets/css/list.css" />
 {% endblock %}
 
+  {% block title %} Exemples de listes {% endblock %}
+
 {% block content %}
   {% include 'Components/_lists.html.twig' %}
 {% endblock %}
