--- a/src/View/List/share.html.twig
+++ b/src/View/List/share.html.twig
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/assets/css/navbar.css">
 {% endblock %}
 
+{% block title %} Partage {{ list[0]['lname'] }} {% endblock %}
+
 {% block navbar %}
 
     {% include "Components/_navbar.html.twig" %}
