--- a/src/View/Login/index.html.twig
+++ b/src/View/Login/index.html.twig
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="/assets/css/login.css">
     <link rel="stylesheet" href="/assets/css/navbar.css">
 {% endblock %}
+
+{% block title %} Connexion {% endblock %}
+
 {% block navbar %}
 
     {% include "Components/_navbar.html.twig" %}
