--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="/assets/css/navbar.css">
 {% endblock %}
 
+{% block title %} {{ lists['name'] }} {% endblock %}
+
 {% block navbar %}
 
 	{% include "Components/_navbar.html.twig" %}
