--- a/src/View/List/add_list.html.twig
+++ b/src/View/List/add_list.html.twig
@@ -9,6 +9,8 @@
     {% include "Components/_navbar.html.twig" %}
 {% endblock %}
 
+{% block title %} Création de liste {% endblock %}
+
 {% block content %}
     <div class="main-background"></div>
     <div class="add_list-container">
